--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
       <meta name="keywords" content="HTML,CSS,Bootstrap">
       <meta name="author" content="Jaspal Kaur Batra">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <link rel="stylesheet" href="css/style-minified.css">
-      <link rel="icon" href="icons/bicycle.png" type="image/png/gif">
+      <link rel="icon" href="icons/bicycle.png" type="image/png">
       <title>
         Travel Blog
       </title>
@@ -25,16 +24,17 @@
       </script>
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <link rel="stylesheet" href="css/style.css">
       <!-- Favicon -->
       <script defer src="https://use.fontawesome.com/releases/v5.6.1/js/all.js" integrity="sha384-R5JkiUweZpJjELPWqttAYmYM1P3SNEJRM6ecTQF05pFFtxmCO+Y1CiUhvuDzgSVZ" crossorigin="anonymous"></script>
+
   </head>
   <body>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
       <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <h2 class="navbar-brand logo"><img src="icons/wanderlust3.jpg" alt="WanderLust Logo" style="height: 15%; width: 15%;"></h2>
@@ -72,8 +72,7 @@
       </header>
 
 
-
-      <section id="top">
+      <section class="jumbotron" id="top">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -89,49 +88,42 @@
             <img class="d-block w-100" src="images/bangalore5.jpg" alt="Bangalore Palace">
             <div class="carousel-caption d-none d-md-block">      <!-- Use Carousel caption instead of image <caption>..needs to b inside <div>! -->
               <h3>The Bangalore Palace</h3>
-              <p>...</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="images/conrad.jpg" alt="Conrad">
             <div class="carousel-caption d-none d-md-block">
               <h3>Hotel Conrad</h3>
-              <p>...</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="images/gm.jpg" alt="GM Infinite E city town">
             <div class="carousel-caption d-none d-md-block">
               <h3>GM Infinite E City Town,</h3><h4> Electronic City</h4>
-              <p>...</p>
             </div>
           </div>
             <div class="carousel-item">
             <img class="d-block w-100" src="images/manyata.jpg" alt="Manyata Tech Park">
             <div class="carousel-caption d-none d-md-block">
               <h3>Manyata Tech Park</h3>
-              <p>...</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="images/hebbal.jpg" alt="Hebbal Lake">
             <div class="carousel-caption d-none d-md-block">
               <h3>Hebbal Lake</h3>
-              <p>...</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="images/ibm.jpg" alt="IBM">
             <div class="carousel-caption d-none d-md-block">
               <h3>IBM Global Services India Limited</h3>
-              <p>...</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="images/salarpuriasattva.jpg" alt="Salarpuria Sattva">
             <div class="carousel-caption d-none d-md-block">
               <h3>Salarpuria Sattva Gold Summit Apartments</h3>
-              <p>...</p>
             </div>
           </div>
         </div>
@@ -402,6 +394,5 @@
         </nav>
       </footer>
     </div>
-
   </body>
 </html>
